file(GLOB SRC "*.cpp")
add_library(feature STATIC ${SRC})
target_link_libraries(feature)
target_link_libraries(feature config)
target_link_libraries(feature base)
target_include_directories(feature PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(feature ${OpenCV_LIBS})
add_subdirectory(test)
