#file(GLOB SRC "*.cpp")
set(SRC vo.hpp vo.cpp)
add_library(vo STATIC ${SRC})
target_link_libraries(vo config vo base stereo feature)
target_link_libraries(vo ${OpenCV_LIBS})
target_include_directories(vo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

#add_executable(test_vo test_vo.cpp)
#target_link_libraries(test_vo vo config base stereo feature)
add_subdirectory(test)
